fixed color contrast on link

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -193,3 +193,6 @@ footer .social-links a {
   font-size: 22px;
   border-radius: 50%;
 }
+.openSource{
+  color: #0c62e4 ;
+}
